<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityConsultas">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/clave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/busqueda"
            android:inputType="textPersonName" />

        <Spinner
            android:id="@+id/opciones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Spinner
            android:id="@+id/opcionesC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/mostrar_espeifico"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="consultarAlumnos"
            android:text="@string/btn_consultas" />

        <Button
            android:id="@+id/mostrar_todos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="consultarAlumnos"
            android:text="@string/todos" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <ListView
                    android:id="@+id/tabla"
                    android:layout_width="match_parent"
                    android:layout_height="377dp" />
            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>